# RuGpt3_Amber

./: .gitattributes  README.md  pyproject.toml
.github/workflows/: python-package-conda.yml
rugpt3_amber/: generator.py
rugpt3_amber/data/: _stage_run_lint.sh  pathes.py
rugpt3_amber/data/tuned_model/: config.json  generation_config.json  model.safetensors  special_tokens_map.json  tokenizer_config.json
tests/: generator_func.py  generator_generation.py  generator_init.py  test_generator_func.py  test_generator_generation.py  test_generator_init.py
