[tool.poetry]
name = "rugpt3-amber"
version = "0.1.0"
description = ""
authors = ["Sergo-M <mr.sermoz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = {extras = ["torch"], version = "^4.36.2"}
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
